Adapt MavenRuntimeManagerTest to slf4j from Maven-Central